<resources>
    <string name="app_name">MidTermAndroid</string>
    <string name="name_surname_year">Nikoloz Maisadze 2004</string>

    <string name="nm_salary_hint">Salary</string>
    <string name="nm_rent_hint">Rent</string>
    <string name="nm_food_hint">Food</string>
    <string name="nm_btn_calculate">Calculate</string>

    <string name="nm_expenses_format">%1$.2f</string>
    <string name="nm_savings_format">Savings: %1$.2f</string>
    <string name="nm_loss_format">Loss: %1$.2f</string>
    <string name="nm_identity_format">%1$s %2$s, %3$d</string>
    <string name="into_header">Finance Tracker</string>
    <string name="intro_description">Enter your financial details below</string>
    <string name="financial_analysis_title">Financial analysis</string>
    <string name="total_expenses_title">Total Expenses</string>
    <string name="financial_summary_title">Financial Summary</string>
</resources>