<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/nm_edit_salary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nm_salary_hint"
        android:inputType="numberDecimal"
        android:autofillHints="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nm_edit_rent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/nm_rent_hint"
        android:inputType="numberDecimal"
        android:autofillHints="none"
        app:layout_constraintTop_toBottomOf="@id/nm_edit_salary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nm_edit_food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/nm_food_hint"
        android:inputType="numberDecimal"
        android:autofillHints="none"
        app:layout_constraintTop_toBottomOf="@id/nm_edit_rent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/nm_btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nm_btn_calculate"
        app:layout_constraintTop_toBottomOf="@id/nm_edit_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>